--- a/scss/partials/_page-header.scss
+++ b/scss/partials/_page-header.scss
@@ -132,6 +132,7 @@
 .pageHeader__search {
   position: absolute;
   right: 0;
+  z-index: 1;
 
   @media #{$small-up} {
     margin-top: 0.5rem;
