--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9122,11 +9122,11 @@ body:after {
 /* line 66, ../scss/partials/_base.scss */
 a,
 input[type=text] {
-  -webkit-transition: all 200ms ease;
-  -moz-transition: all 200ms ease;
-  -ms-transition: all 200ms ease;
-  -o-transition: all 200ms ease;
-  transition: all 200ms ease;
+  -webkit-transition: all 250ms ease;
+  -moz-transition: all 250ms ease;
+  -ms-transition: all 250ms ease;
+  -o-transition: all 250ms ease;
+  transition: all 250ms ease;
 }
 
 /* line 71, ../scss/partials/_base.scss */
@@ -9794,6 +9794,7 @@ blockquote {
 .pageHeader__search {
   position: absolute;
   right: 0;
+  z-index: 1;
 }
 @media only screen {
   /* line 132, ../scss/partials/_page-header.scss */
@@ -9807,7 +9808,7 @@ blockquote {
     margin-top: 0;
   }
 }
-/* line 144, ../scss/partials/_page-header.scss */
+/* line 145, ../scss/partials/_page-header.scss */
 .pageHeader__search input[type=text] {
   width: 200px;
   margin-bottom: 0;
@@ -9825,7 +9826,7 @@ blockquote {
   text-align: right;
   text-transform: uppercase;
 }
-/* line 160, ../scss/partials/_page-header.scss */
+/* line 161, ../scss/partials/_page-header.scss */
 .pageHeader__search input[type=text]:focus {
   background-color: white;
 }
